# ClearableDateTimeEdit

./: .gitignore  LICENSE  README.md  date_time_main.py  mainwindow.py  mvc_app.py  popup.py  pyproject.toml  requirements.txt  setup.py
ClearableDateTimeEdit/: DateTimeEdit.py  Settings.py  Widgets.py  __init__.py
ClearableDateTimeEdit/popup/: DateTimePopup.py  DateTimePopupUi.py  Helpers.py  TimeWidget.py  __init__.py
ClearableDateTimeEdit/resources/: datetime1.ui  time_widget.ui
controllers/: main_ctrl.py
date_time_edit/: __init__.py  custom_date_time_edit.py  settings.py
date_time_edit/popup/: classes.py  dt_popup_ui.py  dt_popup_view.py  time_widget.py
date_time_edit/resources/: time_widget_ui.py
model/: model.py
resources/: calender_popup.py  datetime.ui  datetime1.ui  datetime_tabellarisch.ui  datetime_vert.ui  environment.yml  mainwindow.py  mainwindow_table.py  mainwindow_vert.py
views/: main_view.py  main_view_ui.py
